# web_midi_streamer

./: .env.example  .gitignore  CHANGELOG.md  CHIMES.md  CODE_REVIEW.md  DEPLOYMENT_NOTES.md  INSTRUCTIONS_RU.md  MIGRATE.md  README.md  ROOMS_FEATURE.md  SIGNALING.md  TASK_SUMMARY.md  TEST_README.md  TURN_CREDENTIALS_SETUP.md  TURN_SERVER_SETUP.md  TURN_SETUP.md  TURN_TESTING.md  apache-proxy.conf  app.js  chimes.example.json  chimes.json  config.example.php  generate_icons.py  get-turn-credentials.php  help-en.html  help-ru.html  index.html  manifest.json  package-lock.json  package.json  playwright.config.js  pyproject.toml  rebuild.sh  server.py  service-worker.js  setup-systemd.sh  setup.py  signal.json  signaling.php  style.css  (+3 more)
apps/chord-display/: index.html  main.js  style.css
apps/irealb-maker/: index.html
apps/midi-streamer/: index.html
apps/nord-effects/: index.html  main.js  style.css
error/: Ded Moroz is coming to town_irealb(2).html  Ded Moroz is coming to town_progress.json
icons/: PLACEHOLDER.txt  README.md
js/: main.js
scripts/: release.py
signaler/: go.mod  install.sh  main.go  signaler.service
src/: app.js  chord-utils.js  config.js  i18n.js  main.js  midi-worker.js  midi.js  participants.js  piano.js  recorder.js  rooms.js  ui.js  utils.js  webrtc.js
tests/: README.md  low-latency.spec.js  test_basic.spec.js
tools/: BUG_FIX_VERIFICATION.md  IReal docs.md  chord-display.html  help.html  index.html  irealb-maker-tasks.md  irealb-maker.html  nord-effects.html  test_fix.html
tools/deprecated/: README.md  irealb-maker.html
